--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .okno {
     position: relative;
-    background-image: url(assets/images/фон.png);
+    background-image: url(Assets/Images/фон.png);
     background-color: #2e6780;
     width: 1110px;
     height: 672px;
